<resources>
    <string name="app_name">CinemaLab</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>

    <!-- Main strings Russian -->
    <string name="sign_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="do_registration">Зарегистрироваться</string>
    <string name="already_have_account">У меня уже есть аккаунт</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="main">Главное</string>
    <string name="compilation">Подборка</string>
    <string name="collections">Коллекции</string>
    <string name="profile">Профиль</string>
    <string name="edit_avatar">Изменить</string>
    <string name="exit">Выход</string>
    <string name="settings">Настройки</string>
    <string name="history">История</string>
    <string name="discussions">Обсуждения</string>
    <string name="watch_button_text">Смотреть</string>
    <string name="there_are_no_more_compilation_films">Новые фильмы \nв подборке закончились</string>
    <string name="create_collection">Создать коллекцию</string>
    <string name="collection_name">Название</string>
    <string name="choose_icon">Выбрать иконку</string>
    <string name="save">Сохранить</string>
    <string name="favourites">Избранное</string>
    <string name="edit_collection">Изменить коллекцию</string>
    <string name="delete">Удалить</string>
    <string name="icon_select">Выбрать иконку</string>
    <string name="description">Описание</string>
    <string name="frames">Кадры</string>
    <string name="episodes">Эпизоды</string>
    <string name="chats">Обсуждения</string>
    <string name="write_a_message">Напишите сообщение...</string>
    <string name="today">Сегодня</string>
    <string name="in_trend">В тренде</string>
    <string name="you_watched">Вы смотрели</string>
    <string name="new_movies">Новое</string>
    <string name="for_you">Для вас</string>
    <string name="select_interests">Указать интересы</string>

    <!-- Strings with args -->
    <string name="name_and_surname">%1$s %2$s</string>
    <string name="name_and_dots">%1$s:&#160;</string>
    <string name="username_and_time">%1$s • %2$s</string>

    <!-- Error messages -->
    <string name="input_incorrect">Ошибка</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="invalid_email_error_message">Некорректный e-mail\n</string>
    <string name="passwords_are_not_equel">Пароли не совпадают\n</string>
    <string name="password_too_short">Пароль слишком короткий\n</string>
    <string name="error_something_went_wrong">Что-то пошло не так</string>
    <string name="error_user_already_exists">Почта уже занята</string>
    <string name="invalid_email_or_password">Неверные логин или пароль</string>
    <string name="try_to_use_reserved_name_error_message">Коллекция "Избранное" уже существует! \nПожалуйста, выберите другое имя</string>
    <string name="try_to_use_empty_collection_name_error_message">Имя коллекции не заполнено! \nПожалуйста, укажите имя</string>

    <!-- HTTP error status codes -->
    <string name="exception_http_401">HTTP 401 Unauthorized</string>
    <string name="exception_http_403">HTTP 403 Forbidden</string>
    <string name="exception_http_409">HTTP 409 Conflict</string>
    <string name="exception_http_422">HTTP 422 Validation Error</string>
    <string name="exception_http_500">HTTP 500 Internal Server Error</string>

    <!-- Image descriptions -->
    <string name="description_logo">Logo</string>
    <string name="cd_promoted_movie_poster">Promoted movie poster</string>

    <!-- Age limit strings -->
    <string name="age_limit_18">18+</string>
    <string name="age_limit_16">16+</string>
    <string name="age_limit_12">12+</string>
    <string name="age_limit_6">6+</string>
    <string name="age_limit_0">0+</string>

</resources>