<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        style="@style/Theme.CinemaLab.body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_splash_logo" />

    <EditText
        android:id="@+id/etName"
        style="@style/Theme.CinemaLab.body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="name"
        android:background="@drawable/style_field_stroke"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingVertical="13dp"
        android:paddingStart="16dp"
        android:textColor="@color/orange"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/etSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etSurname"
        style="@style/Theme.CinemaLab.body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/surname"
        android:background="@drawable/style_field_stroke"
        android:paddingVertical="13dp"
        android:paddingStart="16dp"
        android:textColor="@color/orange"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/Theme.CinemaLab.body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:background="@drawable/style_field_stroke"
        android:paddingVertical="13dp"
        android:paddingStart="16dp"
        android:textColor="@color/orange"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/Theme.CinemaLab.body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/style_field_stroke"
        android:paddingVertical="13dp"
        android:paddingStart="16dp"
        android:textColor="@color/orange"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordRepeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/etPasswordRepeat"
        style="@style/Theme.CinemaLab.body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:background="@drawable/style_field_stroke"
        android:paddingVertical="13dp"
        android:paddingStart="16dp"
        android:textColor="@color/orange"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/btDoRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="password" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="btDoRegistration,etPasswordRepeat,etSurname,etEmail,etName,etPassword,btHaveAccount"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="253dp" />

    <Button
        android:id="@+id/btDoRegistration"
        style="@style/Theme.CinemaLab.button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/do_registration"
        android:background="@drawable/style_button_filled"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/btHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btHaveAccount"
        style="@style/Theme.CinemaLab.button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/already_have_account"
        android:background="@drawable/style_field_stroke"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>